--- a/static/settings.html
+++ b/static/settings.html
@@ -247,15 +247,15 @@
         <div class="settings-card">
           <h3>Information</h3>
           <p>Version: v5.2.6</p>
-          <p id="last-updated">Last Updated: October 2nd, 2024</p>
+          <p id="last-updated">Last Updated: Dec 10, 2024</p>
           <p>
             Questions? Join our
-            <a href="https://discord.gg/interstellar">Discord community</a>,
+            <a href="NotReady">Discord community</a>,
             email us at
-            <a href="mailto:hello@gointerstellar.app"
-              >hello@gointerstellar.app</a
+            <a href="aintleaking"
+              >NotReady</a
             >, or
-            <a href="https://docs.gointerstellar.app/faq">check our FAQ</a>!
+            <a href="NotReady">check this out</a>!
           </p>
         </div>
       </div>
