--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/assets/css/h.css?v=01" />
     <link rel="stylesheet" href="/assets/css/nav.css?v=01" />
     <script async src=""
-     crossorigin="anonymous"></script>
+     crossorigin="anonymous">"https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6840529569014734"</script>
   </head>
   <body class="center" onload="SplashT">
     <div class="f-nav"></div>
